samples/_failures_safe/1761285116_f372f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_895d4c08.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_895d4c08.c:154:17: error: expected identifier or ‘(’ at end of input
  154 |                 int
      |                 ^~~
./samples/SAFE/__tmp_895d4c08.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_895d4c08.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_895d4c08.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_895d4c08.c:154:17: error: expected declaration or statement at end of input
